--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "Investment Tracker",
   "short_name": "InvestTracker",
   "description": "Personal investment tracker for Ajay Babu & Sachi",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "https://ajaybabutiwari.github.io/investment-tracker/",
+  "scope": "https://ajaybabutiwari.github.io/investment-tracker/",
   "display": "standalone",
   "background_color": "#1E3A5F",
   "theme_color": "#1E3A5F",
@@ -28,13 +28,13 @@
     {
       "name": "Add Investment",
       "short_name": "Add",
-      "url": "/?page=add",
+      "url": "https://ajaybabutiwari.github.io/investment-tracker/?page=add",
       "icons": [{ "src": "https://img.icons8.com/color/96/000000/plus--v1.png", "sizes": "96x96" }]
     },
     {
       "name": "Alerts",
       "short_name": "Alerts",
-      "url": "/?page=alerts",
+      "url": "https://ajaybabutiwari.github.io/investment-tracker/?page=alerts",
       "icons": [{ "src": "https://img.icons8.com/color/96/000000/alarm.png", "sizes": "96x96" }]
     }
   ]
